--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
       {
         "allow": ["warn", "error"]
       }
-    ]
+    ],
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
